re PR c++/20817 (ICE for tree check in build_offset_type)

cp:
	PR c++/20817
	* typeck.c (build_x_unary_op): Make sure OFFSET_REF is not for a
	->*.
testsuite:
	PR c++/20817
	* g++.old-deja/g++.benjamin/13908.C: Robustify expected error.

From-SVN: r103482